# telecomnancy-twitter-like

./: .gitignore  CMakeLists.txt  Makefile  README.md  capture_wireshark.pcapng  client  idee_implementation.md  init_db.sql  rapport.md  server  spec_protocole.md
lib/json-c/include/json-c/: config.h
sql/: idee.sql  sample_data1.sql  sample_data2.sql
src/client/: Makefile  client.c  client.h  methods.c  methods.h  spec_const.h  terminal.c  terminal.h  tools.c  tools.h
src/server/: Makefile  const.h  db.c  db.h  handle_request.c  handle_request.h  init_db.sh  init_db.sql  json_communication.c  json_communication.h  methods.c  methods.h  server.c  server.h  spec_const.h
src/serveur/: const.h  server.c  treat_request.c  treat_request.h
